--- a/Automate_Transfer_cloud/Browser_automate_script.ipynb
+++ b/Automate_Transfer_cloud/Browser_automate_script.ipynb
@@ -113,13 +113,15 @@
     "\n",
     "driver.get(\"https://transfercloud.io/?121290\")\n",
     "time.sleep(3)\n",
-    "\n",
+    "print(\"Link opened\")\n",
     "driver.find_element_by_xpath(username_field).send_keys(username)\n",
     "driver.find_element_by_xpath(passwd_field).send_keys(passwd)\n",
     "driver.find_element_by_xpath(login_button).click()\n",
     "time.sleep(2)\n",
+    "print(\"Logged in successfully!\")\n",
     "\n",
-    "driver.find_element_by_xpath(radio).click()"
+    "driver.find_element_by_xpath(radio).click()\n",
+    "print(\"Switched to drive\")"
    ]
   },
   {
@@ -149,7 +151,7 @@
     "        print(\"Que limit exceeded\")\n",
     "        time.sleep(300)\n",
     "    except NoSuchElementException:\n",
-    "        print(f\"Pasting links{i}\")\n",
+    "        print(f\"Pasting links{i+1}\")\n",
     "        driver.find_element_by_xpath(down_vid_link).send_keys(link[\"links\"][i])\n",
     "        driver.find_element_by_xpath(down_vid).click()\n",
     "        time.sleep(300)\n",
